# Thesis

./: .gitignore  __init__.py  config.py  data_collector.py  pyproject.toml  readme.md  requirements.txt  setup.py  setup_env.py
data/merged_for_voting/: merged_pull_requests.csv
data/pr_sentiment_aggregated/: pr_sentiment_summary.csv
data/reviewed/: comments_manual_reviewed.csv  pull_requests_manual_reviewd.csv
datasets/preprocessed/: code-review-dataset-balanced.csv  combined_DeepSentimentSECrossPlatform.csv  combined_dataset-balanced.csv
datasets/raw/: combined_DeepSentimentSECrossPlatform.csv  combined_dataset.xlsx  emotions.csv
docs/: Timeline.txt
docs/Figures/: Idea Diagram.drawio
docs/report/: Abstract.docx  Report Outline.docx  bib.docx  ch01.docx  ch02.docx  ch03.docx
experiments/binary_classification/: sentiment_pie_charts.py  sentiment_processor.py
experiments/binary_statistical_analysis/: merge_features.py
experiments/data_collection/: check_api_rate_limit.py  count_csv_entries.py  generate_graphs.py  generate_radar_chart.py
experiments/deberta_3class_performance_analysis/: analyze_prediction_confidence.py
experiments/statistical_analysis/: sentiment_aggregator.py  visualize_model.py
experiments/three_classification/: add_manual_label.py  (+6 more)
notebooks/: deberta_fine_tuning.ipynb  notebook_setup.py  oracle_dataset_exploration.ipynb  toxiCR_dataset_exploration.ipynb
report/: hosmer_lemeshow_test.txt  logistic_regression_summary.txt  metrics.txt  odds_ratios_and_confidence_intervals.csv
src/: config.py  config_three_class.py
(+402 files in other folders)
