[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis"
version = "0.1.0"
description = "Sentiment Analysis Thesis Project"
authors = [
    {name = "Afshin Paydar", email = "example@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "emoji",
    "requests",
    "transformers>=4.39.3",
    "datasets",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tqdm",
    "jupyter",
    "notebook",
    "openpyxl",
    "torch>=1.13",
    "scikit-learn",
    "ipywidgets",
    "beautifulsoup4",
    "reportlab",
    "statsmodels",
    "wordcloud",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
include = ["src", "src.*"]
exclude = ["venv", "notebooks"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 88
target-version = ["py38"]
